fix text overflowing container by adding break-word rule and decreasing font size

--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,10 @@ body {
 .text-container p {
   font-family: 'Cabin Sketch', cursive;
   text-transform: uppercase;
-  font-size: 4.5em;
+  font-size: 4em;
   color: #524E52;
+  max-width: 100%;
+  word-wrap: break-word;
 }
 
 .image-container {
